// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`getFileTreeItem > should return a TreeItem for a file element 1`] = `
{
  "collapsibleState": 0,
  "command": {
    "arguments": [
      Uri {
        "fsPath": "/mock/file/path.py",
        "path": "/mock/file/path.py",
        "scheme": "file",
      },
    ],
    "command": "vscode.open",
    "title": "Open File",
  },
  "label": "mock.py",
  "resourceUri": Uri {
    "fsPath": "/mock/file/path.py",
    "path": "/mock/file/path.py",
    "scheme": "file",
  },
}
`;

exports[`getFolderTreeItem > should return a TreeItem for a folder element. isMarked:false 1`] = `
{
  "collapsibleState": 1,
  "contextValue": "canAddRemoteFileSource:python",
  "iconPath": ThemeIcon {
    "color": undefined,
    "id": "folder",
  },
  "label": "mockFolder",
  "resourceUri": Uri {
    "fsPath": "/mock/folder/path/",
    "path": "/mock/folder/path/",
    "scheme": "file",
  },
}
`;

exports[`getFolderTreeItem > should return a TreeItem for a folder element. isMarked:true 1`] = `
{
  "collapsibleState": 1,
  "contextValue": "canRemoveRemoteFileSource:python",
  "iconPath": ThemeIcon {
    "color": undefined,
    "id": "folder",
  },
  "label": "mockFolder",
  "resourceUri": Uri {
    "fsPath": "/mock/folder/path/",
    "path": "/mock/folder/path/",
    "scheme": "file",
  },
}
`;

exports[`getLanguageRootTreeItem > should return a collapsed TreeItem for a language root element: groovy 1`] = `
{
  "collapsibleState": 1,
  "contextValue": "languageRoot",
  "iconPath": ThemeIcon {
    "color": undefined,
    "id": "coffee",
  },
  "label": "groovy root",
}
`;

exports[`getLanguageRootTreeItem > should return a collapsed TreeItem for a language root element: python 1`] = `
{
  "collapsibleState": 1,
  "contextValue": "languageRoot",
  "iconPath": ThemeIcon {
    "color": undefined,
    "id": "dh-python",
  },
  "label": "python root",
}
`;

exports[`getRootTreeItem > should return an expanded TreeItem for a root element 1`] = `
{
  "collapsibleState": 2,
  "contextValue": "root",
  "label": "root",
}
`;

exports[`getTopLevelMarkedFolderTreeItem > should return a non-collapsible TreeItem for a top-level marked folder element 1`] = `
{
  "collapsibleState": 0,
  "contextValue": "canRemoveRemoteFileSource:python",
  "description": undefined,
  "iconPath": ThemeIcon {
    "color": undefined,
    "id": "dh-python",
  },
  "label": "",
  "resourceUri": Uri {
    "fsPath": "/mock/top/level/marked/folder/",
    "path": "/mock/top/level/marked/folder/",
    "scheme": "file",
  },
}
`;

exports[`getWorkspaceFolderRootTreeItem > should return a collapsed TreeItem for a workspace folder root element 1`] = `
{
  "collapsibleState": 1,
  "label": "Workspace1",
}
`;
